--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Nitroglicerine/myfirstproject#readme",
   "dependencies": {
+    "cli": "^1.0.1",
     "d": "^1.0.1"
   },
   "devDependencies": {
